# hypospray

./: .gitignore  Justfile  README.md  pyproject.toml
hack/: hypospray.py
src/hypospray/: main.py  tools.py
testing/: redeploy.sh
testing/envs/00-healthy-00/: manifest.yaml
testing/envs/01-missing-env-var/: Dockerfile  deploy.sh  entrypoint.sh  manifest.yaml
testing/envs/02-bad-selector-service/: manifest.yaml
testing/envs/03-incorrect-image-pull-policy/: manifest.yaml
testing/envs/04-invalid-resource-request-limit/: deploy.sh  manifest.yaml
testing/envs/05-node-selectors/: manifest.yaml
